--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -12,3 +12,9 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     color: unset;
 }
+
+.base-card {
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    background-color: #fff;
+  }
