--- a/frontweb/src/components/ButtonIcon/styles.css
+++ b/frontweb/src/components/ButtonIcon/styles.css
@@ -1,3 +1,55 @@
-.btn-icon {
+.btn-icon-container {
+    display: flex;
+    height: 50px;
+    width: 50px;
+    background-color: #33569b;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 10px 10px 0;
+}
+
+.btn-container {
+    display: flex;
+}
+
+.btn-container button {
+    border-radius: 10px 0 0 10px;
+}
+
+.btn h6 {
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+@media(min-width: 576px){
+.btn-icon-container{
+    width: 50px;
     height: 50px;
 }
+
+.btn h6 {
+    font-size: 18px;
+}
+
+.btn-container button{
+    width: 334px;
+    height: 50px;
+}
+}
+@media(min-width: 996px){
+.btn-icon-container{
+    width: 70px;
+    height: 70px;
+}
+
+.btn h6 {
+    font-size: 24px;
+}
+
+.btn-container button{
+    width: 450px;
+    height: 70px;
+}
+}
+
