--- a/frontweb/src/pages/ProductDetails/styles.css
+++ b/frontweb/src/pages/ProductDetails/styles.css
@@ -33,7 +33,9 @@
 .img-container {
     text-align: center;
     margin-bottom: 20px;
-    border: 1px solid purple;
+    border: 1px solid #e1e1e1;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .img-container img{
@@ -52,7 +54,9 @@
 }
 
 .description-container {
-    border:1px solid orangered;
+    border: 1px solid #e1e1e1;
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .description-container h2 {
@@ -66,4 +70,64 @@
     color: #9e9e9e;
     letter-spacing: -0.020em;
     font-size: 0.6em;
+}
+
+@media(min-width: 576px){
+    
+    .product-details-container{
+        padding: 20px;
+        font-size: 32px;
+    }
+    .product-details-card{
+        padding: 20px;
+    }
+}
+
+@media(min-width: 992px){
+    .product-details-container{
+        padding: 40px;
+    }
+
+    .product-details-card {
+        padding: 40px;
+    }
+
+    .img-container img {
+        width: 50%;
+    }
+
+    .name-price-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .description-container {
+        padding: 35px;
+    }
+}
+
+@media(min-width: 1200px){
+    .name-price-container{
+        display: block;
+    }
+
+    .img-container img {
+        width: auto;
+        height: 280px;
+    }
+
+    .description-container {
+        min-height: 302px;
+    }
+}
+
+@media(min-width: 1400px) {
+    .img-container img {
+        width: auto;
+        height: 480px;
+    }
+
+    .description-container {
+        min-height: 502px;
+    }
 }
