--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -18,3 +18,16 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 10px;
     background-color: #fff;
   }
+
+  .base-input {
+    border-radius: 10px;
+    font-size: 1em;
+    letter-spacing: -0.015em;
+    color: #263238;
+    height: 50px;
+  }
+   
+  .base-input::placeholder {
+    color: #9E9E9E;
+  }
+  
