--- a/frontweb/src/assets/styles/custom.scss
+++ b/frontweb/src/assets/styles/custom.scss
@@ -1,6 +1,7 @@
 $theme-colors: (
   'primary': #407bff,
-  'danger' : #ff9999,
+  'danger' : #df5753,
+  'secondary' : #9e9e9e,
 );
 
 $body-bg: #f2f2f2;
