--- a/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -1,5 +1,6 @@
 .product-crud-card{
     margin-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .product-crud-card-top-container{
@@ -25,5 +26,24 @@
 .product-crud-categories-container {
     padding: 0 20px;
     display: flex;
+    flex-wrap: wrap;
+}
+
+.product-crud-card-buttons-container {
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-crud-card-buttom-first {
+    margin-right: 10px;
+}
+
+.product-crud-card-buttom {
+    font-size: 14px;
+    letter-spacing: -0.015em;
+    border-radius: 10px;
+    width: 110px;
+    height: 40px;
 }
 
