ProductCrudCard horizontal responsive

--- a/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -1,49 +1,88 @@
-.product-crud-card{
-    margin-bottom: 30px;
-    padding-bottom: 20px;
+.product-crud-card {
+  margin-bottom: 30px;
+  padding-bottom: 20px;
 }
 
-.product-crud-card-top-container{
-    text-align: center;
-    padding:16px 0;
-    border-bottom: 1px solid #e1e1e1;
+.product-crud-card-top-container {
+  text-align: center;
+  padding: 16px 0;
+  border-bottom: 1px solid #e1e1e1;
 }
 
-.product-crud-card-top-container img{
-    width: 158px;
-    height: 158px;
+.product-crud-card-top-container img {
+  width: 158px;
+  height: 158px;
 }
 
-.product-crud-card-bottom-container{
-    padding: 15px 20px 30px 20px;
+.product-crud-card-bottom-container {
+  padding: 15px 20px 30px 20px;
 }
 
-.product-crud-card-bottom-container h6{
-    font-size: 18px;
-    color: #263238;
+.product-crud-card-bottom-container h6 {
+  font-size: 18px;
+  color: #263238;
 }
 
 .product-crud-categories-container {
-    padding: 0 20px;
-    display: flex;
-    flex-wrap: wrap;
+  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .product-crud-card-buttons-container {
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .product-crud-card-buttom-first {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .product-crud-card-buttom {
-    font-size: 14px;
-    letter-spacing: -0.015em;
-    border-radius: 10px;
-    width: 110px;
-    height: 40px;
+  font-size: 14px;
+  letter-spacing: -0.015em;
+  border-radius: 10px;
+  width: 110px;
+  height: 40px;
 }
 
+@media (min-width: 768px) {
+  .product-crud-card {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 0;
+  }
+
+  .product-crud-card-top-container {
+    border-right: 1px solid #e1e1e1;
+    border-bottom: 0;
+  }
+
+  .product-crud-card-buttons-container {
+    flex-direction: column-reverse;
+    justify-content: center;
+  }
+
+  .product-crud-card-buttom-first {
+    margin-right: 0;
+    margin-top: 22px;
+  }
+
+  .product-crud-card-buttom {
+    width: 140px;
+  }
+
+  .product-crud-card-description {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 992px){
+    .product-crud-card-buttom {
+        width: 220px;
+    }
+}
