--- a/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -57,6 +57,7 @@
   .product-crud-card-top-container {
     border-right: 1px solid #e1e1e1;
     border-bottom: 0;
+    width: 200px;
   }
 
   .product-crud-card-buttons-container {
