--- a/frontweb/src/pages/Admin/Products/Form/styles.css
+++ b/frontweb/src/pages/Admin/Products/Form/styles.css
@@ -36,6 +36,22 @@
     width: 110px;
 }
 
+.product-crud-select__control {
+    height: 50px;
+    font-size: 1em;
+    letter-spacing: -0.015em;
+    color: #263238;
+    border-radius: 10px !important;
+}
+
+.product-crud-select__placeholder {
+    color: #9e9e9e !important;
+}
+
+.product-crud-select__indicator-separator {
+    display: none;
+}
+
 @media(min-width: 576px){
     .product-crud-buttons-container{
         justify-content: flex-end;
