--- a/frontweb/src/App.css
+++ b/frontweb/src/App.css
@@ -30,4 +30,10 @@ h1, h2, h3, h4, h5, h6 {
   .base-input::placeholder {
     color: #9E9E9E;
   }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
   
