--- a/frontweb/src/pages/Admin/Categories/List/styles.css
+++ b/frontweb/src/pages/Admin/Categories/List/styles.css
@@ -14,6 +14,7 @@
   .category-crud-bar-container {
     display: flex;
     margin-bottom: 20px;
+    width: 100%;
   }
 
   .category-filter-container {
@@ -25,5 +26,6 @@
   .btn-crud-add {
     height: 60px;
     margin-bottom: 0;
+    
   }
 }
