--- a/frontweb/src/components/ProductFilter/styles.css
+++ b/frontweb/src/components/ProductFilter/styles.css
@@ -12,6 +12,7 @@
 
 .product-filter-name-container input {
     border: none;
+    font-size: 0.8em; /*tamanho da letra do placeholder do produto*/
 }
 
 .product-filter-name-container input:focus {
@@ -55,6 +56,7 @@
 
 .product-filter-select__placeholder {
     color: #9e9e9e !important;
+    font-size: 0.8em !important;/*tamanho da letra do placeholder da categoria */
 }
 
 .product-filter-select__indicator-separator {
@@ -74,7 +76,6 @@
     }
 
     .product-filter-container {
-        margin-left: 20px;
         margin-bottom: 0;
         flex: 1;
         padding: 10px 15px;
